--- a/bayesian-mixed-model.Rmd
+++ b/bayesian-mixed-model.Rmd
@@ -176,6 +176,9 @@ pp_check(
 ```
 
 
+## Source
 
+Original code available at:
+https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/Bayesian/rstan_MixedModelSleepstudy_withREcorrelation.R
 
 
