--- a/bayesian-non-parametric.Rmd
+++ b/bayesian-non-parametric.Rmd
@@ -199,3 +199,7 @@ heatmaply::heatmaply(
 ```
 
 
+## Source
+
+Original code available at:
+https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/crp.R
