--- a/bayesian-linear-regression.Rmd
+++ b/bayesian-linear-regression.Rmd
@@ -165,3 +165,7 @@ pp_check(
 )
 ```
 
+## Source
+
+Original code available at:
+https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/Bayesian/rstan_linregwithprior.R
